--- a/style.css
+++ b/style.css
@@ -7,13 +7,18 @@
 body{
     font-family: 'Roboto';
     background: linear-gradient(to bottom, rgb(31, 121, 91), aqua);
+    height: 96.5vh;
 }
-
+.tit::before{
+    content: none;
+}
 main{
     background-color: white;
     margin: 15px auto;
-    max-width: 700px;
+    max-width: 675px;
     padding: 1rem;
+    border-radius: 3px;
+    border: 1px solid black;
 }
 
 h2::before{
@@ -34,8 +39,8 @@ a{
 }
 a:hover{
     color: aqua;
-    background-color: rgba(0, 0, 0, 0.623);
-    transition:0.4s;
-    padding: 3.5px;
-    border-radius: 5px;
+    background-color: rgba(0, 0, 0, 0.473);
+    transition:0.2s;
+    padding: 3px;
+    border-radius: 6px;
 }
